# eeg_tools

./: README.md  environment.yml  pyproject.toml
data/: neutronic_data.txt
src/eeg_tools/eegio/: data_handler.py  edf_loader.py  neutronic.py  open_bci.py
src/eeg_tools/entropy/: permutation_entropy.py
src/eeg_tools/utils/: embedding.py  utils.py
test/test_data_io/: test_data_oi.py
test/test_permutation_ent/: test_eeg_windows_permutation_ent.py  test_permutation_ent.py  test_win_permutation_ent.py
